--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
     </section>
     <div class="se_area">
       <audio id="btn_audio1">
-        <source src="https://yusuke113.github.io/inazuma-vote/audio/stand up 立ち上がりーよ.mp3" type="audio/mp3" />
+        <source src="https://yusuke113.github.io/inazuma-vote/audio/audio1.mp3" type="audio/mp3" />
       </audio>
       <audio id="btn_audio2">
-        <source src="https://yusuke113.github.io/inazuma-vote/audio/イナズマチャレンジャー.mp3" type="audio/mp3" />
+        <source src="https://yusuke113.github.io/inazuma-vote/audio/audio2.mp3" type="audio/mp3" />
       </audio>
       <audio id="btn_audio3">
-        <source src="https://yusuke113.github.io/inazuma-vote/audio/和太鼓でドドン.mp3" type="audio/mp3" />
+        <source src="https://yusuke113.github.io/inazuma-vote/audio/audio3.mp3" type="audio/mp3" />
       </audio>
       <audio id="btn_audio4">
-        <source src="https://yusuke113.github.io/inazuma-vote/audio/和太鼓でドドン.mp3" type="audio/mp3" />
+        <source src="https://yusuke113.github.io/inazuma-vote/audio/audio4.mp3" type="audio/mp3" />
       </audio>
     </div>
     <script src="./js/main.js"></script>
