--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
       <img src="./images/iOS の画像.gif" alt="" width="270" height="152" class="bg_image" />
       <div class="inner">
         <div class="vote_area">
-          <h1 id="counter">0</h1>
-          <canvas id="meter"></canvas>
+          <div class="meter_area">
+            <h1 id="counter">0</h1>
+            <canvas id="meter"></canvas>
+          </div>
           <div class="btn_area">
             <input type="button" value="応援する1" class="vote_btn" data-audio-num="1" />
             <input type="button" value="応援する2" class="vote_btn" data-audio-num="2" />
