--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
   </head>
   <body>
     <section class="vote_sec">
-      <!-- <img src="./images/iOS の画像.gif" alt="" width="270" height="152" class="bg_image" /> -->
       <img
         src="./images/inazuma_1_1242x2208.png"
         alt=""
@@ -31,14 +30,18 @@
       <div class="inner">
         <div class="vote_area">
           <div class="meter_area">
-            <h1 id="counter">0</h1>
+            <h1>ゲージを貯めると
+              <br>
+              <img src="./images/godhand.svg" alt="" class="godhand_img">
+              が出るかも？</h1>
+            <h2 id="counter">0</h1>
             <canvas id="meter"></canvas>
           </div>
           <div class="btn_area">
-            <a href="#" class="vote_btn" data-audio-num="1">応援する1</a>
-            <a href="#" class="vote_btn" data-audio-num="2">応援する2</a>
-            <a href="#" class="vote_btn" data-audio-num="3">応援する3</a>
-            <a href="#" class="vote_btn" data-audio-num="4">応援する4</a>
+            <a href="#" class="vote_btn" data-audio-num="1">応援歌1</a>
+            <a href="#" class="vote_btn" data-audio-num="2">応援歌2</a>
+            <a href="#" class="vote_btn" data-audio-num="3">応援歌3</a>
+            <a href="#" class="vote_btn" data-audio-num="4">応援歌4</a>
           </div>
         </div>
       </div>
