--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
         </div>
       </div>
     </section>
+    <div class="godgif">
+      <img src="./images/god-hand-inazuma-eleven.gif" alt="">
+    </div>
     <div class="se_area">
       <audio id="btn_audio1">
         <source
