--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="./dist/gauge.min.js"></script>
   </head>
   <body>
-    <div id="access_overlay"></div>
+    <!-- <div id="access_overlay"></div> -->
     <section class="vote_sec">
       <div class="bg_img"></div>
       <div class="inner">
